# scrap-ai-extractor

./: .gitignore  README.md  local_medical_html_extraction.py  pyproject.toml
config/: app_config.template.json
config/templates/: dayi_disease.json  dayi_qa.json
data/template_store/: dayi_disease_v1.json  dayi_org_cn_article_detail_article_page_06f6da00_v1.json  dayi_qa_v1.json  m_dayi_org_cn_article_detail_article_page_0403cf10_4554c39a605c_v1.json  m_dayi_org_cn_article_detail_article_page_0403cf10_88fdefaf9bcc_v1.json
data/template_store/erj_ajcass_com/: ajcass_com_detail_page_detail_page_c5d7b04b_v1.json  (+2 more)
docs/: architecture.md  java-runtime.md  requirements.md  template-design.md
docs/java/: CachedTemplateExtractionService.java  DeclarativeTemplateEngine.java  HtmlTemplateExtractor.java  TemplateContract.java  TemplateExtractionApi.java  TemplateManifestRepository.java  TemplateRuntimeDiagnostics.java
scripts/: benchmark_template_reuse.py  run_ui.ps1  run_ui_server.py  stop_ui.ps1
src/hybrid_extractor/: __init__.py  api_server.py  classification.py  cli.py  config.py  engine.py  fingerprinting.py  intent.py  logging_utils.py  models.py  preprocessing.py  prompts.py  rule_runtime.py  template_registry.py  validation.py  web_ui.py
tests/: test_api_server.py  test_classification.py  test_config.py  test_controller.py  test_engine.py  test_fingerprinting.py  test_llm_extractor.py  test_prompts.py  test_rule_runtime.py  test_template_parser.py  test_template_upgrade.py
tests/fixtures/: dayi_disease_sample.html  dayi_qa_sample.html
(+13 files in other folders)
