[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-web-extractor"
version = "0.1.0"
description = "Hybrid web extraction system with template-aware deterministic parsing and LLM fallback."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scrapegraphai>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
hybrid-web-extractor = "hybrid_extractor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
